# alien2d

./: .gitignore  CMakeLists.txt  main.cpp
alien2d/: alien_dx11.hpp  alien_gfx.hpp  alien_gl.hpp  alien_sprite.hpp  alien_window.hpp  base.hpp  common.hpp  math.hpp
alien2d/KHR/: khrplatform.h
alien2d/gl/: glcorearb.h  glext.h  wglext.h
debug-build/: CMakeCache.txt  GameFramework.cbp  GameFramework.ilk  Makefile  cmake_install.cmake
debug-build/.cmake/api/v1/reply/: cache-v2-54af3db2b236b0878dba.json  cmakeFiles-v1-9a66de1bef16115e0989.json  codemodel-v2-59b51524807cee5e4cc6.json  index-2022-10-08T12-45-11-0225.json  target-GameFramework-Debug-804208a1747b6e98ed48.json  toolchains-v1-08c6f09534dd98239453.json
shaders/dx/: shaders.hlsl
shaders/gl/: vs.glsl
